@@ -6,6 +6,9 @@
       but status_code can be used
     * host port returns port from HOST or scheme
     * openapi wrapper binds request to Host or Forwarded header
+    * new PoorSession interface
+        * use secret_key instead of Request object in __init__ method
+	* use load method for loading cookie
 
 ==== 2.3.4 ====
     * new cgi.py interface fix
